@@ -1,5 +1,7 @@
 *SVN*
 
+* Ensure render :json => ... skips the layout.  Closes #6808 [Josh Peek]
+
 * Fix HTML::Node to output double quotes instead of single quotes.  Closes #6845 [mitreandy]
 
 * Correctly report which filter halted the chain.  #6699 [Martin Emde]
